# phoodle-solver

./: .gitignore  README.md
nextjs-frontend/: README.md  next.config.ts  package.json
nextjs-frontend/public/: word_scores.json
nextjs-frontend/src/app/: layout.tsx  page.tsx
nextjs-frontend/src/hooks/: use-wasm-solver.ts
nextjs-frontend/src/lib/: wasm-loader.ts
standalone-wasm/: README.md  index.html  phoodle_solver.d.ts  phoodle_solver.js  phoodle_solver_bg.js  phoodle_solver_bg.wasm
wasm-source/: Cargo.toml
wasm-source/src/: lib.rs  words.rs
